Refactor base code